manifests-envoy/httproute-traffic-policy-target-ref.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-with-extproc-envoy
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "www.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /myapp
      backendRefs:
        - name: backend
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-without-extproc-envoy
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "www.example.com"
  rules:
    - backendRefs:
        - name: backend
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
